src/test/resources/validation/error/queryReturningInterfaceIllegalArguments/schema.graphqls
type Kull implements Node @node {
  id: ID!
  navn: String! @column(name : "STUDIEKULLNAVN")
}

interface Node {
  id: ID!
}

type Query {
  nodes(id: ID!, navn: String): Node
}
